--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "build:prod": "webpack --env.ENV=prod --env.production",
     "build:live": "webpack --env.ENV=live --env.production",
     "node": "node dist/server.js",
+    "prettier": "npx prettier --write .",
     "lint": "eslint --quiet=true --fix --ext .js app",
     "lint:fix": "eslint --fix",
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -21,12 +22,14 @@
     }
   },
   "lint-staged": {
+    "**/*": "prettier --write --ignore-unknown",
     "app/**/*.js": [
       "eslint --fix",
       "git add"
     ]
   },
   "dependencies": {
+    "form-data": "^4.0.0",
     "js-md5": "^0.7.2",
     "jsonwebtoken": "^8.1.0",
     "koa": "^2.2.0",
@@ -41,9 +44,9 @@
     "koa2-swagger-ui": "^5.5.0",
     "moment": "^2.24.0",
     "mysql2": "^1.6.5",
+    "node-fetch": "2",
     "nunjucks": "^3.1.3",
     "parameter": "^3.5.0",
-    "request": "^2.88.0",
     "sequelize": "^5.2.8",
     "svg-captcha": "^1.3.11",
     "swagger-jsdoc": "^6.1.0"
@@ -57,8 +60,8 @@
     "@babel/runtime": "^7.16.7",
     "babel-loader": "^8.2.3",
     "clean-webpack-plugin": "^4.0.0",
-    "copy-webpack-plugin": "5.1.1",
     "colors": "^1.3.2",
+    "copy-webpack-plugin": "5.1.1",
     "cross-env": "^7.0.3",
     "eslint": "^8.6.0",
     "externals-dependencies": "^1.0.4",
