--- a/package.json
+++ b/package.json
@@ -5,12 +5,9 @@
   "author": "awei <274635143@qq.com>",
   "private": true,
   "scripts": {
-    "dev": "cross-env ENV=dev MODE=development ./node_modules/.bin/nodemon --exec babel-node bin/www",
-    "build:dev": "webpack --env.ENV=dev --env.production",
-    "build:test": "webpack --env.ENV=test --env.production",
-    "build:prod": "webpack --env.ENV=prod --env.production",
-    "build:live": "webpack --env.ENV=live --env.production",
-    "node": "node dist/server.js",
+    "dev": "nodemon --exec babel-node bin/www",
+    "build": "webpack",
+    "start": "node dist/app/server.js",
     "prettier": "npx prettier --write .",
     "lint": "eslint --quiet=true --fix --ext .js app",
     "lint:fix": "eslint --fix",
@@ -29,6 +26,7 @@
     ]
   },
   "dependencies": {
+    "dotenv": "^16.4.5",
     "form-data": "^4.0.0",
     "js-md5": "^0.7.2",
     "jsonwebtoken": "^8.1.0",
@@ -62,7 +60,6 @@
     "clean-webpack-plugin": "^4.0.0",
     "colors": "^1.3.2",
     "copy-webpack-plugin": "5.1.1",
-    "cross-env": "^7.0.3",
     "eslint": "^8.6.0",
     "externals-dependencies": "^1.0.4",
     "husky": "^7.0.4",
